2.6.1
- Ensure TOAST tables are included in results. By default, pgstattuple does not include the underlying TOAST table for a relation. TOAST tables are now scanned as separate objects because their bloat status can vary widely from the main table. However, fixing TOAST bloat must be done through the main table.


2.6.0
- Modified --quiet option to allow setting multiple times to suppress different levels of non-error output.
    - Setting once will cause console output to only be given if bloat is actually found (supresses "no bloat found" message).
    - Setting two or more times will suppress all console output, even if bloat is found. Resulting data is only stored in stats tables. Setting value more than twice has no additional affects.
    - Added shorthand option to --quiet as -u to allow setting multiple times easier. Can do "--quiet --quiet", "-u -u", or "-uu". -q already taken by --quick and did not want to break backward compatability.


2.5.1
- Allow the --rebuild_index option to honor all other filters so you only get rebuilding commands that are relevant to your desired bloat thresholds. Output of commands is now also given in wasted space order (similar to simple output list) starting with the largest.
- Added labels to the simple output to more clearly identify the object type (i=index, t=table, p=primary key).


2.5.0
- Added --recovery_mode_norun option. This allows the same crontab entry to be entered on all systems in a failover cluster and ensure the bloat check is always only run on whichever system is the primary.


2.4.3
- Make exit codes and database connection closes consistent throughout script. 


2.4.2
- Fix regression in 2.4.1 that stopped --rebuild_index option from adding CONCURRENTLY flag to unique index statements.


2.4.1