@@ -1,5 +1,7 @@
 2.6.1
 - Ensure TOAST tables are included in results. By default, pgstattuple does not include the underlying TOAST table for a relation. TOAST tables are now scanned as separate objects because their bloat status can vary widely from the main table. However, fixing TOAST bloat must be done through the main table.
+    - "simple" output will also output its associated real table.
+- Fix python 3 compatibility
 
 
 2.6.0
